Assignment-3/Problem-2_Compilation.txt
; if ($?) { gcc problem1.c -o problem1 } ; if ($?) { .\problem1 }
problem1.c: In function 'main':
problem1.c:9:5: error: expected ',' or ';' before 'int'
     int y = 20;
     ^~~
problem1.c:18:17: warning: initialization makes integer from pointer without a cast [-Wint-conversion]
     int marks = "Ninety";
                 ^~~~~~~~
problem1.c:20:20: error: 'z' undeclared (first use in this function)
     printf("%d\n", z);
                    ^
problem1.c:20:20: note: each undeclared identifier is reported only once for each function it appears in
problem1.c:22:9: error: lvalue required as left operand of assignment
     100 = x;
         ^
problem1.c:28:18: warning: initialization from incompatible pointer type [-Wincompatible-pointer-types]
     float *ptr = &x;
                  ^
problem1.c:37:15: warning: multi-character character constant [-Wmultichar]
     char ch = 'AB';
               ^~~~
problem1.c:37:15: warning: overflow in implicit constant conversion [-Woverflow]
problem1.c:39:12: error: 'y' undeclared (first use in this function)
     if(x > y)
            ^
problem1.c:46:5: warning: implicit declaration of function 'show' [-Wimplicit-function-declaration]
     show();
     ^~~~
problem1.c:53:5: error: continue statement not within a loop
     continue;
     ^~~~~~~~
problem1.c:55:5: error: break statement not within loop or switch
     break;
     ^~~~~
problem1.c:57:18: error: too few arguments to function 'calculate'
     int result = calculate(10);
                  ^~~~~~~~~
problem1.c:4:5: note: declared here
 int calculate(int a, int b);
     ^~~~~~~~~
